--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/sabihak89/radium#readme",
   "dependencies": {
+    "aws-sdk": "^2.1047.0",
     "axios": "^0.24.0",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
@@ -26,6 +27,7 @@
     "moment": "^2.29.1",
     "mongoose": "^6.0.12",
     "mongoose-type-url": "^2.1.0",
+    "multer": "^1.4.4",
     "nodemon": "^2.0.15",
     "randomstring": "^1.2.1",
     "redis": "^3.1.2",
